criando components filhos

--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-roxo/card-roxo.component.html
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-roxo/card-roxo.component.html
@@ -1,5 +1,5 @@
 <div class="card">
     <div class="card__plan card__item">Plano <strong>Simples</strong></div>
     <div class="card__price card__item">R$100,00/Mês</div>
-    <div class="card__button card__item">Adquirir</div>
+    <app-card-roxo-button></app-card-roxo-button>
 </div>
