--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card/card.component.html
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card/card.component.html
@@ -4,6 +4,7 @@
   </div>
   <div class="card__price card__item">{{ getFullPrice() }}</div>
   <app-card-button></app-card-button>
+  <app-card-button-cancel></app-card-button-cancel>
 </div>
 
 <!-- Interpolação {{ variavel/method }} -->
