--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-button-cancel/card-button-cancel.component-2.scss
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-button-cancel/card-button-cancel.component-2.scss
@@ -5,6 +5,6 @@
         2° - .card-cancel-button {background-color: black;}
         1° - div.card-cancel-button {background-color: black;} especifica que a class e de um div
   */
-.card-cancel-button {
-  background-color: rgb(172, 0, 100);
-}
+// .card-cancel-button {
+//   background-color: rgb(172, 0, 100);
+// }
