--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card/card.component.scss
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card/card.component.scss
@@ -25,10 +25,19 @@
 //nos components filhos e separado, cada um têm seu style
 
 //Alterando o style do component filho com
-::ng-deep .cancel-button .card-cancel-button{
+::ng-deep #cancel-button-2 .card-cancel-button{
   background-color: rgb(4, 170, 142) !important;
 }
 
 ::ng-deep  .card-cancel-button-2{
   background-color: rgb(255, 70, 178) !important;
+}
+
+//Aplica a mudança do style nos elementos somente daquele scopo
+//ou seja os filhos e pai, mas daquele component, não vaza para os demais
+//component por causa do :host, se mais de um elementos
+//utilizar a tag/class irá aplicar para todos do scopo.
+:host ::ng-deep .card-cancel-button{
+  background-color: yellow !important;
+  color: black !important;
 }
