--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-button-cancel/card-button-cancel.component.scss
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-button-cancel/card-button-cancel.component.scss
@@ -26,7 +26,7 @@
 
 div.card-cancel-button {
   background-color: $bgColor;
-  color: yellow;
+  color: black;
   font-size: 16px;
   text-align: center;
   margin-top: 10px;
