[caso 02] style em elementos especificos sem vazamento

--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-roxo/card-roxo.component.html
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-roxo/card-roxo.component.html
@@ -2,5 +2,11 @@
   <div class="card__plan card__item">Plano <strong>Simples</strong></div>
   <div class="card__price card__item">R$100,00/Mês</div>
   <app-card-roxo-button></app-card-roxo-button>
-  <app-card-button-cancel></app-card-button-cancel>
+
+
+  <app-card-button-cancel id="primeiro"></app-card-button-cancel>
+
+  <app-card-button-cancel id="segundo"></app-card-button-cancel>
+
+
 </div>
