--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/styles.scss
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/styles.scss
@@ -2,6 +2,6 @@
 
 //Aqui fica as regras em nível global, afetam toda a aplicação
 
-@import "./styles/global-overrides" //por questão de organização dos styles global
+//@import "./styles/global-overrides" //por questão de organização dos styles global
 //criamos um file com os styles e só importamos aqui.
 
