--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/app.component.html
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/app.component.html
@@ -1,8 +1,5 @@
 <div class="cards-container">
   <app-card></app-card>
   <card-roxo></card-roxo>
-
-
-  <app-card-roxo-button></app-card-roxo-button>
-
+  <!-- <app-card-roxo-button></app-card-roxo-button> -->
 </div>
