--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/app.component.scss
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/app.component.scss
@@ -1,5 +1,8 @@
 .cards-container{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     gap: 8px;
+    flex-wrap: wrap;
+    margin-top: 8px;
 }
