--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-roxo/card-roxo.component.html
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-roxo/card-roxo.component.html
@@ -6,7 +6,10 @@
 
   <app-card-button-cancel id="primeiro"></app-card-button-cancel>
 
-  <app-card-button-cancel id="segundo"></app-card-button-cancel>
+  <!-- <app-card-button-cancel id="segundo"></app-card-button-cancel> -->
 
+  <mat-slider min="1" max="5" step="0.5">
+    <input matSliderThumb value="1.5">
+  </mat-slider>
 
 </div>
