--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card/card.component.html
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card/card.component.html
@@ -5,4 +5,10 @@
   <div class="card__price card__item">{{ getFullPrice() }}</div>
   <app-card-button></app-card-button>
   <app-card-button-cancel></app-card-button-cancel>
+
+  <mat-slider min="1" max="5" step="0.5">
+    <input matSliderThumb value="1.5">
+  </mat-slider>
+
+  
 </div>
