encapsulation: ViewEncapsulation.None

--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card/card.component.html
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card/card.component.html
@@ -6,9 +6,7 @@
   <app-card-button></app-card-button>
   <app-card-button-cancel></app-card-button-cancel>
 
-  <mat-slider min="1" max="5" step="0.5">
-    <input matSliderThumb value="1.5">
-  </mat-slider>
-
-  
+  <div class="global">GLOBAL</div>
+  <div class="card-cancel-button">GLOBAL 3</div>
 </div>
+
