--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-roxo/card-roxo.component.html
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-roxo/card-roxo.component.html
@@ -2,14 +2,10 @@
   <div class="card__plan card__item">Plano <strong>Simples</strong></div>
   <div class="card__price card__item">R$100,00/Mês</div>
   <app-card-roxo-button></app-card-roxo-button>
-
+  <app-card-button-cancel></app-card-button-cancel>
 
   <app-card-button-cancel id="primeiro"></app-card-button-cancel>
 
-  <!-- <app-card-button-cancel id="segundo"></app-card-button-cancel> -->
-
-  <mat-slider min="1" max="5" step="0.5">
-    <input matSliderThumb value="1.5">
-  </mat-slider>
+  <div class="global">GLOBAL 2</div>
 
 </div>
