--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/styles.scss
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/styles.scss
@@ -2,6 +2,16 @@
 
 //Aqui fica as regras em nível global, afetam toda a aplicação
 
-@import "./styles/global-overrides"; //por questão de organização dos styles global
+//@import "./styles/global-overrides"; //por questão de organização dos styles global
 //criamos um file com os styles e só importamos aqui.
 
+/*
+.global{
+
+  O stilo do component setado com o encapsulation: ViewEncapsulation.None
+  terá prevalência até mesmo sobre o style global da aplicação.
+  no caso: o que está definido em card.component.scss
+
+  background-color: brown;
+}
+ */
