encapsulation: ViewEncapsulation.Emulated - default

--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-roxo/card-roxo.component.html
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-roxo/card-roxo.component.html
@@ -7,5 +7,5 @@
   <app-card-button-cancel id="primeiro"></app-card-button-cancel>
 
   <div class="global">GLOBAL 2</div>
-
+  <div class="emulated">EMULATED DEFAULT 2</div>
 </div>
