--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card/card.component.html
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card/card.component.html
@@ -10,3 +10,17 @@
   <div class="card-cancel-button">GLOBAL 3</div>
 </div>
 
+<hr>
+<div class="card">
+  <div class="card__plan card__item">
+    Plano <strong>{{ tipo }}</strong>
+  </div>
+  <div class="card__price card__item">{{ getFullPrice() }}</div>
+  <app-card-button></app-card-button>
+  <app-card-button-cancel></app-card-button-cancel>
+
+  <div class="emulated">EMULATED DEFAULT</div>
+
+</div>
+
+
