encapsulation: ViewEncapsulation.ShadowDom

--- a/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-roxo/card-roxo.component.html
+++ b/secao3-fundamentos-do-angular-componentes-e-estilizacoes/meus-exemplos/projeto-components/src/app/card-roxo/card-roxo.component.html
@@ -8,4 +8,7 @@
 
   <div class="global">GLOBAL 2</div>
   <div class="emulated">EMULATED DEFAULT 2</div>
+
+  <div class="card-cancel-button">SHADOW DOM 2</div>
+
 </div>
