Event Binding == Vinculação de evento (keyup)='handleInputKeyup()'

--- a/secao4-fundamentos-do-angular-binding-diretivas-templates-decorators/meus-exemplos/components-dinamicos/src/app/app.component.html
+++ b/secao4-fundamentos-do-angular-binding-diretivas-templates-decorators/meus-exemplos/components-dinamicos/src/app/app.component.html
@@ -3,7 +3,9 @@
   [value]="inputText"
   [type]="inputType"
   [disabled]="isDisabled"
+  (input)="handleInputEvent($event)"
 />
+<!-- (keyup)="handleInputKeyup($event)" -->
 <br /><br />
 
 <button (click)="enableInput()">Habilitar</button>
